General refactoring and improvement of main for demonstration